added github option

--- a/editProfile.html
+++ b/editProfile.html
@@ -18,8 +18,8 @@
         <label for="name">Name</label>
         <input type="text" id="name" />
 
-        <label for="facebook">Facebook</label>
-        <input type="text" id="facebook" />
+        <label for="github">GitHub</label>
+        <input type="text" id="github" />
 
         <label for="instagram">Instagram</label>
         <input type="text" id="instagram" />
