--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <section class="socialLinks">
         <h2>Your Links</h2>
         <div class="linkContainer">
-          <button id="facebookButton" class="socialItem">
-            <i class="fab fa-facebook-square fa-3x"></i>
+          <button id="githubButton" class="socialItem">
+            <i class="fab fa-github fa-3x"></i>
           </button>
           <button id="instagramButton" class="socialItem">
             <i class="fab fa-instagram fa-3x"></i>
